--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "A discord bot for XRO woe statistics",
   "main": "node .",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "nodemon index.js"
   },
   "author": "",
   "license": "ISC",
@@ -12,6 +12,7 @@
     "@google-cloud/local-auth": "^2.1.0",
     "discord.js": "^14.6.0",
     "googleapis": "^105.0.0",
+    "nodemon": "^2.0.20",
     "phantom": "^6.3.0"
   }
 }
